2016-09-16 Riccardo Mottola <rm@gnu.org>

	* localclient.m
	use isAbsolutePath!

2016-08-23 Riccardo Mottola <rm@gnu.org>

	* fileTable.m
	cleanup and simplify housekeeping of the sorted array.

2016-08-23 Riccardo Mottola <rm@gnu.org>

	* fileTable.m
	Do not keep in the sortedArray just name and index, but really just the sorted object pointers.

2016-08-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Do not run runloop, no longer needed.

2016-08-06 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
        * ftpclient.h
        * ftpclient.m
        make store/retrieve client methods return immediately oneway void and then
        use call-back method fileStored/fileRetrieved to complete action

2016-08-02 Riccardo Mottola <rm@gnu.org>

	* client.h
        * client.m
        make also workDirSplit return result bycopy

2016-08-02 Riccardo Mottola <rm@gnu.org>

	* fileElement.m
	Implement coder methods for bycopy.

2016-08-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
        When Retrieving, set file-element path since it can be different than source.

2016-08-02 Riccardo Mottola <rm@gnu.org>

	* client.h
        * client.m
        * ftpclient.m
        * localclient.m
        Pass directory elements array by copy

2016-08-01 Riccardo Mottola <rm@gnu.org>

	* AppController.h
        * AppController.m
        Pass progress parameters by copy

2016-08-01 Riccardo Mottola <rm@gnu.org>

	* AppController.h
        * AppController.m
        Use NSTimeInterval for speed calculations.

2016-07-08 Riccardo Mottola <rm@gnu.org>

	* client.h
	* client.m
	* ftpclient.m
	* localclient.m
	* AppController.m
	Delete files may fail, handle result.

2016-07-07 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Use passive as default.

2016-07-03 Riccardo Mottola <rm@gnu.org>

	* AppController.h
        * AppController.m
        Mark progress methods as oneway.

2016-07-03 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m